Correction du responsive pour la version mobile

--- a/src/style/404.scss
+++ b/src/style/404.scss
@@ -30,11 +30,14 @@ body {
                 }
             }
             .errorContainer__pError {
+                width: 80%;
+                display: inline-block;
+                text-align: center;
                 color: $red-light;
                 margin: 30px 0;
                 font-size: 36px;
                 @media (max-width: 910px) {
-                    font-size: 15px;
+                    font-size: 18px;
                 }
             }
             .errorContainer__link {
