--- a/src/style/APropos.scss
+++ b/src/style/APropos.scss
@@ -14,6 +14,9 @@
             gap: 30px;
             padding: 5% 0 5% 0;
             align-items: center;
+            @media screen and (max-width: 810px) {
+                gap: 20px;
+            }
         }
     }
 }
