--- a/src/style/DropDown.scss
+++ b/src/style/DropDown.scss
@@ -1,13 +1,6 @@
 .ContentBx {
     max-width: 75%;
     border-radius: 10px 10px 5px 5px;
-    @media screen and (max-width: 810px) {
-        max-width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
     .Label {
         border: none;
         display: flex;
@@ -16,7 +9,7 @@
         box-sizing: border-box;
         width: 100%;
         padding: 1.2%;
-        border-radius: 5px;
+        border-radius: 10px;
         font-size: 24px;
         font-weight: 500;
         background-color: #FF6060;
@@ -25,11 +18,16 @@
         @media screen and (max-width: 810px) {
             width: 100%;
             padding: 1.2%;
-            border-radius: 10px;
+            border-radius: 5px;
+            font-size: 13px;
         }
         .chevron {
+            width: 24px;
             transition-duration: 0.3s;
             transition-property: transform;
+            @media screen and (max-width: 810px) {
+                width: 16px;
+            }
         }
         .open {
             transform: rotate(-180deg);
