--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -15,6 +15,8 @@
         font-weight: 500;
         @media (max-width: 810px) {
             font-size: 12px;
+            width: 50%;
+            margin: auto;
         }
     }
 }
